Refactor DES and DESX classes to use static methods and update encryption/decryption logic; enhance file handling in MainController